Changes for REDIPS.drag library

4.6.16
- fixed relocate() method - discarded "REDIPS.drag.obj !== from.childNodes[i]" condition from element filter

4.6.15
- added public property REDIPS.drag.table_sort with default value "true"
  Table sort is feature where tables inside drop container are sorted on each element click. Sometimes this feature should be turned off when one table overlays the other using "position" style relative, fixed or absolute.
- added example23 - Shopping cart

4.6.14
- added public property REDIPS.drag.autoscroll with default value "true"
  If set to "false" then autoscroll option will be completely turned off for page and any DIV container with CSS style overflow set to anything but 'visible'
- added third optional "skip" parameter to the find_parent() method

4.6.13
- myhandler_deleted call is moved to the end inside element_deleted method
- it seemed that find_cell() method was not published as public - now it is

4.6.12
- added control inside REDIPS.drag.relocate() method - "from" and "to" input parameters should be element nodes

4.6.11
- added boolean parameter "cloned" to the myhandler_deleted event handler (reference of original DIV element is stored in REDIPS.drag.obj_old)

4.6.10
- fixed bug for dropped elements in iPad
  * it seems that Safari Mobile loses registrated events (traditional model) assigned to the DIV element
  * in element_drop() is added definition of event listener after appendChild/insertBefore (obj.onmousedown = handler_onmousedown; ...)

4.6.9
- fixed bug in save_content() - DIV elements without "drag" class name are skipped - thanks to CG Developer
- added parameter REDIPS.drag.save_pname to define parameter name in save_content() method

4.6.8
- modified save_content() method
  * first parameter is id or table reference
  * second parameter is optional and defines output in JSON format
  * table index is not contained in output because save_content() scans content for asked table (table is already known)

4.6.7